# job-app-finder

./: .gitignore  Job Application Finder.md  README.md  companies.yaml  config.yaml  pyproject.toml
.streamlit/: config.toml
src/job_app_finder/: app.py  config.py  dedup.py  geo.py  humanize.py  ingest.py  link_check.py  match.py  models.py  scheduler.py  ui.py
src/job_app_finder/db/: __init__.py  database.py  postings_repo.py  queries.py  schema.sql
src/job_app_finder/sources/: __init__.py  adzuna.py  base.py  greenhouse.py  handshake.py  http.py  jsearch.py  lever.py  relevance.py  remoteok.py  remotive.py  usajobs.py  workday.py
tests/: test_adapters.py  test_ats_and_board_adapters.py  test_db.py  test_dedup.py  test_geo.py  test_handshake_adapter.py  test_humanize.py  test_ingest.py  test_link_check.py  test_match.py  test_postings_repo.py  test_queries.py  test_registry.py  test_relevance.py  test_scheduler.py
